...
                                        <rect key="frame" x="54" y="0.0" width="192" height="108.5"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Irf-zi-0Qj">
                                        <rect key="frame" x="0.0" y="117.5" width="300" height="68"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="x2X-Nj-meJ">
                                        <rect key="frame" x="0.0" y="194.5" width="300" height="67.5"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mobile Number" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6i5-e1-gCU">
                                        <rect key="frame" x="0.0" y="271" width="300" height="68"/>
                                        <constraints>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="Register">
                                            <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        </state>
...
            <objects>
                <navigationController id="3cF-lG-ybV" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="FOOD" id="I6y-5U-iaL"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P5E-sG-cQL">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
                                <rect key="frame" x="20" y="383" width="374" height="130.5"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="83B-F6-gcu">
                                        <rect key="frame" x="37" y="0.0" width="300" height="60"/>
                                        <constraints>
...
                                            <constraint firstAttribute="width" constant="300" id="fNh-uj-GpD"/>
                                        </constraints>
                                        <state key="normal" title="Reset Password"/>
                                        <connections>
                                            <action selector="RepassTap:" destination="i8N-jt-TVb" eventType="touchUpInside" id="zRJ-h9-tcW"/>
...
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Login">
                                                    <attributes>
                                                        <color key="NSColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                                            <constraint firstAttribute="height" constant="30" id="gmh-Bi-PlR"/>
                                        </constraints>
                                        <state key="normal" title="Forget Passwowrd?"/>
                                        <connections>
                                            <segue destination="i8N-jt-TVb" kind="show" id="HMu-CJ-6lk"/>
...
                                        <rect key="frame" x="127" y="486.5" width="46" height="65.5"/>
                                        <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Button"/>
                                        <connections>
                                            <segue destination="lSm-5D-YUc" kind="show" id="PHP-ny-5Tu"/>
...
