...
    }
   
    @IBAction func RepassTap(_ sender: Any) {
        
        let error = validateFields()
        let em = email.text!
        var myAlert = UIAlertController(title: "Success", message: "Password reset link has been send to yor email", preferredStyle: UIAlertController.Style.alert)
        let okAction = UIAlertAction(title: "OK", style: UIAlertAction.Style.default){ (ACTION) in
            
             self.navigationController?.popViewController(animated: true)
        }
        myAlert.addAction(okAction)
        if error != nil
                  {
...
